--- a/safproject/WebContent/mainpage/main.css
+++ b/safproject/WebContent/mainpage/main.css
@@ -1,28 +1,53 @@
-.announcement_container {
+.main_banner {
+    margin-top: 8.57143rem !important;
+    margin-bottom: 0 !important;
+    display: block;
+    box-sizing: border-box;
+}
+
+.back_div {
+    touch-action: pan-y;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    overflow: hidden;
+    list-style: none;
+    padding: 0;
+    z-index: 1;
+    box-sizing: border-box;
+    display: block;
+}
+
+.con_div {
     max-width: 1140px;
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+    box-sizing: border-box;
     display: block;
-    font-family: "Gotham","Noto Sans KR",sans-serif !important;
-    font-weight: 400;
-    line-height: 1.6;
-    color: #333;
 }
 
-.announcement {
+.con_row {
+    scroll-snap-type: x mandatory;
+    overflow: auto;
+    backface-visibility: hidden;
+    transform: translate3d(0,0,0);
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
     display: flex;
     flex-wrap: wrap;
-    margin-right: 0;
-    margin-left: 0;
+    transition-property: transform;
+    box-sizing: content-box;
+    list-style: none;
 }
 
-.anoounce {
-    padding-bottom: 1.42857rem !important;
-    flex: 0 0 50%;
-    max-width: 100%;
+.con_col1 {
+    flex: 0 0 58.333333%;
+    max-width: 58.333333%;
     position: relative;
     width: 100%;
     padding-right: 15px;
@@ -32,59 +57,233 @@
     
 }
 
-.nav_bar {
-    display: flex;
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    padding-left: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    list-style: none;
-    flex-wrap: wrap;
-    margin-top: 0;
-    margin-block-start: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    text-align: center;
-    font-weight: 700;
+.img_fluid {
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+    border-style: none;
+    box-sizing: border-box;
 }
 
-.nav_item {
+.con_col2 {
+    flex: 0 0 41.666667%;
+    max-width: 41.666667%;
+    position: relative;
+    width: 100%;
+    padding-right: 30px;
+    padding-left: 30px;
+    box-sizing: border-box;
+    display: block;
+    color: #fff;
+}
+
+.col2_item {
+    padding-left: 1.42857rem !important;
+    padding-right: 1.42857rem !important;
+    padding-left: 1.42857rem !important;
+    padding-right: 1.42857rem !important;
+    margin-bottom: 2.14286rem !important;
+    box-sizing: border-box;
+    display: block;
+}
+
+.col2_item a {
+    color: #fff !important;
+    line-height: 1.3 !important;
+    text-decoration: none !important;
+    outline: none;
+    background-color: transparent;
+    box-sizing: border-box;
+    cursor: pointer
+}
+
+.ci_tit {
+    word-break: keep-all;
+    font-size: 2.14286rem !important;
+    font-weight: 700!important;
+    box-sizing: border-box;
+    color: #fff !important;
+    line-height: 1.3 !important;
+    cursor: pointer;
+}
+
+.ci_con {
+    word-break: keep-all;
+    padding-left: 0.21429rem !important;
+    font-size: 1rem !important;
+    box-sizing: border-box;
+    color: #fff !important;
+    line-height: 1.3 !important;
+    cursor: pointer;
+}
+
+.find_animal {
+    max-width: 1140px;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    box-sizing: border-box;
+}
+
+.find_btn {
+    flex-direction: row-reverse!important;
+    display: flex!important;
+    box-sizing: border-box;
+}
+
+.find_text {
+    padding-right: 2.85714rem !important;
+    text-align: center!important;
+    box-sizing: border-box;
+    display: block;
+}
+
+.f_text {
+    color: #019267;
+    width: 7.14286rem;
+    height: 7.14286rem;
+    border-width: 1.5px;
+    font-weight: 600 !important;
+    background-color: #fff !important;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    transition: all .2s ease-in-out;
+    border-radius: 50%!important;
+    box-sizing: border-box;
+}
+
+.find_desc {
+    background-color: #2F80ED;
+    margin-top: -3.57143rem !important;
+    color: #fff !important;
+    font-size: 1.07143rem !important;
+    box-sizing: border-box;
+    display: block;
+}
+
+.desc_row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+    box-sizing: border-box;
+    color: #fff !important;
+    font-size: 1.07143rem !important;
+}
+
+.desc_col {
+    align-self: center!important;
+    flex: 0 0 83.333333%;
+    max-width: 83.333333%;
+    flex: 0 0 83.333333%;
+    max-width: 83.333333%;
+    box-sizing: border-box;
+    display: block;
+    color: #fff !important;
+    font-size: 1.07143rem !important;
+}
+
+.col_text {
+    padding: 1.42857rem !important;
+    margin-bottom: 0 !important;
+    display: block!important;
+    display: block!important;
+    color: #fff !important;
+}
+
+.desc_col a {
+    color: #fff !important;
+    text-decoration: none !important;
+    outline: none;
+    background-color: transparent;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-size: 1.07143rem !important;
+}
+
+.saf_activity {
+    padding-top: 2.14286rem !important;
+    padding-bottom: 2.14286rem !important;
+    max-width: 1140px;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    box-sizing: border-box;
+}
+
+.saf_activity p {
+    box-sizing: border-box;
+    color: #333 !important;
+    font-size: 1.28571rem !important;
+    font-size: 1.28571rem !important;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    display: block;
+    font-weight: 700;
+    box-sizing: border-box;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.nav {
+    box-sizing: border-box;
+    display: block;
+}
+
+.nav-bar {
+    margin-top: 1.42857rem !important;
+    margin-bottom: 0 !important;
+    background-color: #fff !important;
+    text-align: center!important;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 0;
+    list-style: none;
+    box-sizing: border-box;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+
+.nav-item {
     display: inline-block;
     flex-basis: 0;
     flex-grow: 1;
     text-align: center;
+    box-sizing: border-box;
+    list-style: none;
 }
 
-.nav_item a {
-    border-color: #004BA0;
-    color: #333333;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border: solid 1px transparent;
-    text-decoration: none;
+.nav-link {
+    background-color: white !important;
     transition-property: color,background-color,border-color;
     transition-duration: .2s;
     transition-timing-function: ease-in;
+    padding: 0 !important;
+    border-color: #bbb !important;
+    border-right: solid 1px!important;
+    color: #555;
     display: block;
-    padding: 0.5rem 1rem;
     outline: none;
-    background-color: transparent;
+    text-decoration: none;
+    box-sizing: border-box;
     cursor: pointer;
+    text-align: center;
 }
 
-.notice {
-    padding-top: 1.42857rem !important;
-    padding-bottom: 1.42857rem !important;
-    flex: 0 0 50%;
-    max-width: 50%;
-    position: relative;
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    display: block;
-    box-sizing: border-box;
+.nav-link:hover{
+    color: #019267;
 }
 
 .contents {
@@ -187,7 +386,10 @@
     animation-duration: 1.5s;
 }
 
-.mySlides {display: none;}
+.mySlides {
+    display: none;
+    position: relative;
+}
 
 .make_change {
     padding-bottom: 0.71429rem !important;
@@ -199,6 +401,17 @@
     font-weight: 400;
     line-height: 1.6;
     color: #333;
+}
+
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+
 }
 
 .ch_tit {
@@ -230,7 +443,7 @@
 
 .row {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap !important; 
     margin-right: -15px;
     margin-left: -15px;
     box-sizing: border-box;
@@ -247,7 +460,7 @@
     flex: 0 0 33.333333%;
     max-width: 33.333333%;
     position: relative;
-    width: 100%;
+    width: 32% !important;
     padding-right: 15px;
     padding-left: 15px;
     box-sizing: border-box;
@@ -367,10 +580,16 @@ body {
     color: #333;
 }
 
-.img_box {
-    background: none;
-    position: relative;
-    display: block;
+.img_a {
+    text-decoration: none !important;
+    color: #004BA0;
+    outline: none;
+    background-color: transparent;
     box-sizing: border-box;
-    user-select: none;
+    box-sizing: border-box;
+}
+
+.img_container {
+    box-sizing: border-box;
+    display: block;
 }
