Revert "0518 커뮤니티 디테일 프론트 수정, 헤더 수정, 마이페이지 css 수정"
This reverts commit 6706457ee02be6e1db62ddbf21b375af010b8f3c.

--- a/safproject/WebContent/board/LostPet.css
+++ b/safproject/WebContent/board/LostPet.css
@@ -145,7 +145,6 @@ body {
 
 .shadow-sm {
     box-shadow: 0 0 35px rgb(140 152 164 / 13%) !important;
-        padding: 10px;
 }
 
 
@@ -159,8 +158,8 @@ body {
     max-width: 33.33333%;
 }
 
-.row-board {
-    display: -ms-flexbox !important;
+.row {
+    display: -ms-flexbox;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     margin-right: -15px;
@@ -168,6 +167,9 @@ body {
     margin-top: 15px;
 }
 
+.te {
+    margin-top: 35px;
+}
 
 @media (min-width:1200px) {
     .container {
@@ -806,14 +808,14 @@ element.style {
 }
 
 
-/* /* div { */
+/* div {
     width: 100%;
     height: 500px;
     
     border: 1px solid #000;
 } */
-div.lb3 {
-    width: 100% !important;
+div.left {
+    width: 63%;
     float: left;
     box-sizing: border-box;
     padding: 50px;
@@ -832,14 +834,6 @@ div.right {
     /* background: #0ff; */
 }
 
-.content {
-	padding: 70px;
-}
 
-.board-image {
- padding-bottom: 56px;
-}
 
-.board-insta {
-	padding-top: 53px;
-}
+
